Incluindo projeto CSS

--- a/CSS-Flexbox/4-jutify-content.html
+++ b/CSS-Flexbox/4-jutify-content.html
@@ -131,7 +131,7 @@
     <!--
     Justify Content
         Essa propriedade vai se encarregar de alinhar os itens dentro do container
-        de acordo com a direção pretendida e tratar da distrinuição de espaçamento 
+        de acordo com a direção pretendida e tratar da distribuição de espaçamento 
         entre eles.
         OBS: caso seus itens esteja ocupando 100% de todo o container, ele não se aplica
         Variações
